# pet-control

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile.mongodb  Dockerfile.postgresql  Makefile  README.md  alembic.ini  build-mongodb-production.sh  build-mongodb-test.sh  build-production.sh  conftest.py  daily_check.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  env.example  main.py  monthly_check.py  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py
app/database/: __init__.py  base.py  connection.py
app/database/migrations/: env.py
app/database/migrations/versions/: 20251203_214008_initial_migration_create_all_tables.py  20251203_222852_add_photo_field_to_pets_table.py
app/database/models/: __init__.py  ectoparasite.py  pet.py  pet_owner.py  profile.py  treatment.py  vaccine.py  vermifugo.py
app/database/seeds/: __init__.py  run_seeds.py
app/models/: __init__.py  treatment.py
app/repositories/: __init__.py  base_repository.py  info_repository.py  pet_repository.py  user_repository.py
app/routes/: __init__.py  auth_routes.py  dashboard_routes.py  info_routes.py  pet_routes.py  treatment_routes.py  user_routes.py  vet_routes.py
app/schemas/: pet.py  user.py
app/services/: __init__.py  auth_service.py  file_service.py  monthly_report_service.py  notification_service.py  pet_service.py  user_service.py
app/services/templates/: consolidated_monthly_report.html  monthly_treatment_report.html  treatment_reminder.html
app/tasks/: README.md  daily_check.py  monthly_check.py
docs/: SOBRE.md
mongodb/: README.md
mongodb/config/: mongod.conf
mongodb/init/: 01-init-db.js  02-create-indexes.js  03-seed-data.js  04-seed-info-data.js
mongodb/scripts/: backup.sh  health-check.sh  restore.sh
postgresql/config/: postgresql.conf
postgresql/init/: 01-create-app-user.sh
postgresql/scripts/: health-check.sh
static/: landing-page.css
templates/: dashboard.html  error.html  index.html  pet_form.html  pet_profile.html  profile.html  profile_update.html  treatment_form.html  vet_dashboard.html
templates/pages/: ectoparasitas.html  vacinas.html  vermifugos.html
tests/: __init__.py  test_auth.py  test_info_pages.py  test_notifications.py  test_pets.py  test_profiles.py  test_treatments.py  test_utils.py  test_vet_features.py
tests/integration/: test_daily_notifications.py
