[project]
name = "pet-app"
version = "1.0.0"
description = "Sistema de gerenciamento de pets com upload de fotos"
authors = [
    {name = "Pet App Team", email = "team@petapp.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pymongo>=4.6.0",
    "faker>=20.0.0",
    "faker-food>=0.3.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.15.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88
